defconfig: Enabled Nitendo Switch commands drivers
Signed-off-by: NotZeetaa <rodrigo2005contente@gmail.com>

--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -3178,6 +3178,7 @@ CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_GENERIC=y
+CONFIG_HID_NINTENDO=y
 
 #
 # Special HID drivers
