--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -1,15 +1,7 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.246 Kernel Configuration
+# Linux/arm64 4.4.269 Kernel Configuration
 #
-# Compiler: Proton clang version 12.0.0 (https://github.com/llvm/llvm-project 398b81067c8202d2b3e4fec23547b6b64d181459)
-CONFIG_GCC_VERSION=0
-CONFIG_CC_IS_CLANG=y
-CONFIG_LTO=y
-CONFIG_THINLTO=y
-# CONFIG_LTO_NONE is not set
-CONFIG_LTO_CLANG=y
-# CONFIG_CFI_CLANG is not set
 CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
@@ -57,9 +49,9 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-neXus-Lavender-old-V10"
-# CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_DEFAULT_HOSTNAME="notzeetaa"
+CONFIG_LOCALVERSION="-neXus-HMP-old-V11"
+CONFIG_LOCALVERSION_AUTO=y
+CONFIG_DEFAULT_HOSTNAME=""
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
